Fix version mobile

--- a/theme/static/css/style.css
+++ b/theme/static/css/style.css
@@ -121,9 +121,8 @@ tt {
 
 /** Header **/
 header, #page_content, #about, #menu {
-	width: 66.66%;
-	min-width: 800px;
-	margin: 0 auto;
+	width: 90%;
+    margin: 0 auto;
 }
 header {
 	font-size: 1.5ex;
@@ -250,6 +249,10 @@ footer #about  {
 
 /** Bigger **/
 @media only screen and (min-width: 840px) {
+    header, #page_content, #about, #menu {
+        width: 66.6%;
+        margin: 0 auto;
+    }
 	#logo {
 		width: auto;
 	}
